--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
 <h1 align = "center">Number Cruncher</h1>
 <h3>The numbers: 11,4,41,50,7,19,8,18,2,6,43,6,20,43,2,23,12,24,31,29</h3>
+<h3>Mean: 19.95</h3>
+<h3>Mode: 2, 6, 43</h3>
+<h3>Median: 18.5</h3>
   </body>
 </html>
